tests/snapshots/utils/address_zero.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - utils
    - address-zero
---
success: true
exit_code: 0
----- stdout -----
111111111111111111111111111111111

----- stderr -----
