tests/snapshots/utils/hash_zero.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - utils
    - hash-zero
---
success: true
exit_code: 0
----- stdout -----
0000000000000000000000000000000000000000000000000000000000000000

----- stderr -----
